Adjustments on ported items